# gonzago-design

./: .editorconfig  .gitattributes  .gitignore  README.md  TODO.md  color_map.csv  make.cmd  make_palettes.py  requirements.in  requirements.txt  run.cmd  setup.cmd
_tools/: dev-requirements.txt  requirements.txt  run.cmd
_tools/config/: icons.export.yml
_tools/docs/source/: conf.py
_tools/src/: build_logo.py  build_palettes.py
_tools/src/gonzago/: files.py
icons/: README.md
palettes/: README.md  godot-4.gpl  godot-4.hex  godot-dark.gpl  godot-light.gpl  gonzago.gpl  gonzago.hex
scripts/: TODO.md  make.py
source/engine/: analyze_default_theme.gd  fix_resources.gd  godot_scene_resources_default_theme at master · godotengine_godot · GitHub.url  icon.svg.import  pattern.png.import  project.godot  show_icons.gd
source/engine/application/: LMMS How I Created Another Epic Orchestral Battle Music (Progress) - YouTube.url  SAM2600.url  godot-icon.svg.import  godot-logo.svg.import  gonzago-icon-large.svg.import  gonzago-icon-medium.svg.import  gonzago-icon-small.svg.import  gonzago-logo-mono-dark.svg.import  (+9 more)
source/maps/: godot-rainbow.map.yml  godot-types.map  godot.map.yml  gonzago.map
source/palettes/: godot-4.yaml  godot-tools.map.yml  gonzago.yaml  readme_template.txt
source/templates/: Reference.url
source/theme_project/: analyze_default_theme.gd  get_default_styleboxes.gd  main.tscn  project.godot
templates/: README.md
tools/: .editorconfig  .gitignore  build_icons.py  build_palettes.py  check_environment.bat  check_python.bat  dev-requirements.txt  env.cmd  init.bat  init.cmd  lib.cmd  make.cmd  make.py  pyproject.toml  run.bat  run.cmd  run.ps1  setup.cmd  setup_environment.bat  test.bat  test.cmd
tools/docs/source/: index.rst
tools/gonzago/: FileSystem.py  Paths.py  __init__.py  cli.py  config.py  exceptions.py  icons.py  images.py  io.py  pal.py  palettes.py  pydantic.py
tools/gonzago/application/: cli.py
tools/gonzago/assets/: cli.py
tools/gonzago/icons/: cli.py
tools/gonzago/palettes/: __init__.py  cli.py  core.py  exceptions.py  formatters.py  io.py  templates.py
tools/gonzago/palettes/formats/: AdobeParser.py  GIMPParser.py  HexParser.py  KritaParser.py  PNGParser.py  PaintNetParser.py  PaintShopProParser.py  ScribusParser.py  StarOfficeParser.py  TemplateParser.py  __init__.py  parser.py
tools/gonzago/presskit/: __init__.py  cli.py
tools/gonzago/utils/: blender.py  cache.py  config.py  filesystem.py  gimp.py  inkscape.py  svg.py
tools/maps/: .editorconfig
tools/src/: build_icons.py  main.py  make.py
tools/src/gonzago/: FileSystem.py
tools/utils/: caching.py  file_system.py  palettes.py  paths.py
(+579 files in other folders)
