# https://hynek.me/til/pip-tools-and-pyproject-toml/
# https://peps.python.org/pep-0621/
# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/#declaring-project-metadata

[project]
name = "gonzago_design_tools"
description = "Tools for Gonzago design assets."
version = "0.0.1"
readme = "README.md"
authors = [
  { name = "David Krummenacher and Gonzago Framework contributors" }
]
requires-python = ">=3.8"
dependencies = [
  "CairoSVG",
  "Pillow",
  "PyYAML",
  "scour"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "vermin"
]

[project.urls]
repository = "https://github.com/godot-gonzago/gonzago-design"
