# https://hynek.me/til/pip-tools-and-pyproject-toml/
# https://peps.python.org/pep-0621/
# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/#declaring-project-metadata

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "gonzago_design_tools"
description = "Tools for Gonzago design assets."
version = "0.0.1"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "David Krummenacher and Gonzago Framework contributors" }
]
requires-python = ">=3.10"
dependencies = [
  "CairoSVG",
  "Pillow",
  "PyYAML",
  "requests",
  "scour"
]

[project.urls]
homepage = "https://github.com/godot-gonzago/gonzago-design"
documentation = "https://github.com/godot-gonzago/gonzago-design"
repository = "https://github.com/godot-gonzago/gonzago-design"
