[tool.poetry]
name = "Gonzago Design Tools"
version = "0.0.1"
description = "Automation and tooling for Gonzago Framework design elements."
authors = [
  "David Krummenacher and Gonzago Framework contributors "
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/godot-gonzago/gonzago-design"
packages = [
  { include = "gonzago" }
]

[tool.poetry.urls]
"Issue Tracker" = "https://github.com/godot-gonzago/gonzago-design/issues"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.9.0"}
pydantic = "^2.5.2"
pydantic-extra-types = "^2.1.0"
semver = "^3.0.2"
tomlkit = "^0.12.3"
pyyaml = "^6.0.1"
jsonschema = "^4.20.0"
pillow = "^10.1.0"
scour = "^0.38.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[tool.poetry.scripts]
gonzago = 'gonzago.cli:app'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
